--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Depot</title>
+  <title>Pragprog Books オンラインストア</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
@@ -9,7 +9,27 @@
 
 <body class='<%= controller.controller_name %>'>
 
-<%= yield %>
+  <div id="banner">
+    <%= image_tag("logo.png") %>
+    <%= @page_title || "Pragmatic Bookshelf" %>
+  </div>
+  
+  <div id="columns">
+    <div id="side">
+      <%= Time.now %>
+      <br />
+      
+      <ul>
+        <li><a href="http://www....">ホーム</a></li>
+        <li><a href="http://www....">よくある質問</a></li>
+        <li><a href="http://www....">ニュース</a></li>
+        <li><a href="http://www....">お問い合わせ</a></li>
+      </ul>
+    </div>
+    <div id="main">
+      <%= yield %>
+    </div>
+  </div>
 
 </body>
 </html>
